# Hexendrum

./: .gitignore  Cargo.toml  LIBRARY_CONFIG.md  LICENSE  Makefile  PROTOTYPE_NOTES.md  README.md  UX_IMPROVEMENTS.md  config-manager.js  main.js  package-lock.json  package.json  preload.js  webpack.config.js
.github/workflows/: ci.yml
docs/: README.md  TROUBLESHOOTING.md
docs/api/: README.md  SWAGGER.md
docs/brand/: GUIDELINES.md
docs/developer/: BACKEND_CONNECTION.md  CHANGELOG.md  CONTRIBUTING.md  ELECTRON_README.md  ORGANIZATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md
docs/examples/: config.toml
docs/user/: README.md
renderer/: App.js  index.html
renderer/components/: AlbumEditorModal.css  AlbumEditorModal.js  LoadingScreen.css  LoadingScreen.js  NotificationSystem.css  NotificationSystem.js  Player.css  Player.js  Sidebar.css  Sidebar.js
renderer/components/layout/: HeaderBar.js  NavigationRail.js  PlaybackBar.js  QueuePanel.js
renderer/contexts/: AudioContext.js
renderer/pages/: Library.css  Library.js  NowPlaying.css  NowPlaying.js  Playlists.css  Playlists.js  Settings.css  Settings.js
renderer/styles/: App.css  Shell.css  global.css
renderer/utils/: albumArt.js
scripts/maintenance/: setup-dev.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/audio/: mod.rs
src/config/: mod.rs
src/events/: mod.rs
src/playlist/: mod.rs
src/utils/: mod.rs
tests/: album_identifier.rs  album_overrides.rs  api_types.rs  config.rs  library.rs  playlist.rs
